ghc-4335c07/testsuite/tests/partial-sigs/should_compile/PatternSplice.hs
{-# LANGUAGE TemplateHaskell #-}
{-# LANGUAGE PartialTypeSignatures #-}
{-# LANGUAGE ScopedTypeVariables #-}
module PatternSplice where

foo $( [p| (x :: _) |] ) = x
