ghc-4335c07/testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardInTypeSplice.hs
{-# LANGUAGE TemplateHaskell #-}
module ExtraConstraintsWildcardInTypeSplice where

import Language.Haskell.TH

metaType :: TypeQ
metaType = [t| _ => _ |]
